Fixed spacing

--- a/asmt2.css
+++ b/asmt2.css
@@ -10,7 +10,7 @@
   padding: 15px;
 }
 
-.forecast td{
-  /* cellspacing:10; */
-  /* padding-right: 10%; */
+#TABLE{
+  border-collapse: separate;
+  border-spacing: 50px 0;
 }
